--- a/app/src/main/res/layout/item_products.xml
+++ b/app/src/main/res/layout/item_products.xml
@@ -11,7 +11,9 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="4dp"
         android:clickable="true"
-        android:foreground="?android:attr/selectableItemBackground">
+        android:foreground="?android:attr/selectableItemBackground"
+        android:outlineAmbientShadowColor="@color/colorLightBlue5"
+        android:outlineSpotShadowColor="@color/colorLightBlue5">
 
         <RelativeLayout
             android:id="@+id/container"
@@ -25,7 +27,9 @@
                 android:layout_alignParentStart="true"
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentTop="true"
-                android:src="@drawable/promo" />
+                android:src="@drawable/ic_payment"
+                android:tint="@color/colorLightBlue8"
+                />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -40,7 +44,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="products 1"
-                    android:textSize="16sp" />
+                    android:textSize="20sp"
+                    android:gravity="center_horizontal"/>
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -53,7 +58,8 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:text="Rp 10000"
-                        android:textSize="14sp" />
+                        android:textSize="18sp"
+                        android:gravity="center"/>
 
 <!--                    <TextView-->
 <!--                        android:id="@+id/tv_rating"-->
