--- a/app/src/main/res/layout/activity_selesai_transaksi.xml
+++ b/app/src/main/res/layout/activity_selesai_transaksi.xml
@@ -43,8 +43,7 @@
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="ra">
+            android:layout_height="wrap_content">
 
             <TextView
                 android:id="@+id/textView3"
