--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -237,16 +237,8 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@color/colorLightBlue10"
+            android:layout_centerVertical="true"
             android:orientation="vertical">
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="BAYAR"
-                android:textSize="20sp"
-                android:textAlignment="center"
-                android:layout_centerVertical="true"
-                android:textColor="@color/white"
-                android:textStyle="bold"/>
             <ImageView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -255,6 +247,29 @@
                 android:paddingRight="7dp"
                 android:id="@+id/bg_pay"
                 />
+            <TextView
+                android:id="@id/tv_satu"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="BAYAR MUDAH"
+                android:textSize="20sp"
+                android:textAlignment="center"
+                android:layout_marginTop="20dp"
+                android:textColor="@color/white"
+                android:textStyle="bold"/>
+            <TextView
+                android:id="@+id/tv_dua"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="DENGAN PUS App"
+                android:layout_below="@id/tv_satu"
+                android:textSize="20sp"
+                android:textAlignment="center"
+
+                android:textColor="@color/white"
+                android:textStyle="bold"/>
+
+
         </RelativeLayout>
 
     </androidx.cardview.widget.CardView>
@@ -292,12 +307,12 @@
                     android:layout_width="80dp"
                     android:layout_height="80dp"
                     android:layout_gravity="center"
-                    android:src="@drawable/ic_chat2" />
+                    android:src="@drawable/logo_pusapp" />
 
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Chat"
+                    android:text="Bayar"
                     android:textAlignment="center"
                     android:textColor="@color/white" />
             </LinearLayout>
