--- a/app/src/main/res/layout/activity_tutorial.xml
+++ b/app/src/main/res/layout/activity_tutorial.xml
@@ -31,6 +31,17 @@
                 android:textSize="20sp" />
 
         </RelativeLayout>
-
     </androidx.appcompat.widget.Toolbar>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/main_toolbar"
+        android:layout_margin="15dp"
+        android:outlineSpotShadowColor="@color/colorLightBlue6"
+        android:outlineAmbientShadowColor="@color/colorLightBlue6">
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:src="@drawable/tutor"/>
+    </LinearLayout>
 </RelativeLayout>
